force-app/main/default/objects/Account/fields/DaveDeveloperTestField__c.field-meta.xml
<CustomField>
    <fullName>DaveDeveloperTestField__c</fullName>
    <description>Field created via UI, to pull down via CLI / VSCode, as per Developer experience</description>
    <label>DaveDeveloperTestField</label>
    <length>20</length>
    <type>Text</type>
</CustomField>