force-app/main/default/objects/Account/fields/DavesTestField2__c.field-meta.xml
<CustomField>
    <fullName>DavesTestField2__c</fullName>
    <label>DavesTestField2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>