force-app/main/default/objects/Account/fields/DavesTestField__c.field-meta.xml
<CustomField>
    <fullName>DavesTestField__c</fullName>
    <description>Adding this field to test that it will be picked up / committed by DevOps v0.1</description>
    <label>DavesTestField</label>
    <length>20</length>
    <type>Text</type>
</CustomField>