force-app/main/default/objects/Account/fields/Employee_size__c.field-meta.xml
<CustomField>
    <fullName>Employee_size__c</fullName>
    <label>Employee size</label>
    <type>TextArea</type>
</CustomField>