force-app/main/default/objects/Account/fields/Sample12__c.field-meta.xml
<CustomField>
    <fullName>Sample12__c</fullName>
    <label>Sample12</label>
    <length>244</length>
    <type>Text</type>
</CustomField>