force-app/main/default/objects/Account/fields/Sample__c.field-meta.xml
<CustomField>
    <fullName>Sample__c</fullName>
    <label>Sample</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>